@@ -65,6 +65,7 @@
 - laplacian generator lost -ve lobes for large sigma
 - added im_aconv(), approximate convolution
 - bumped smalltile to 512x512 for testing
+- added VipsPool, got rid of floating refs again, argh
 
 30/11/10 started 7.24.0
 - bump for new stable
